--- a/style/style.scss
+++ b/style/style.scss
@@ -1271,7 +1271,7 @@ input[type="button"]:focus {
     font-size: 24px;
     font-weight: 400;
 
-    li{
+    li {
       list-style: circle;
       margin-left: 30px;
     }
@@ -1282,26 +1282,34 @@ input[type="button"]:focus {
     grid-column: 1/3;
   }
 
-  &__text p{
+  &__text p {
     font-size: 24px;
     font-weight: 400;
   }
 
-  &__text2{
+  &__text2 {
     margin-top: 40px;
   }
 
-  img {
-    width: 100%;
+  &__pic {
     height: 280px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    border-radius: 20px;
+  }
+
+  img {
+    height: 100%;
+    margin: 0 auto;
   }
 }
 
-.info-pictures{
+.info-pictures {
   margin-bottom: 100px;
   padding-top: 20px;
   padding-bottom: 20px;
-  background: #FF8585;
+  background: #ff8585;
   color: #fff;
 
   display: grid;
@@ -1310,27 +1318,106 @@ input[type="button"]:focus {
   gap: 20px;
   border-radius: 20px;
 
-  &__text{
+  &__text {
     font-size: 30px;
-    
   }
 
-  &__img1{
+  &__img1 {
     grid-column: 2/3;
     grid-row: 1/4;
   }
 
-  &__img2{
+  &__img2 {
     grid-column: 1/2;
     grid-row: 2/7;
   }
 
-  &__img3{
+  &__img3 {
     grid-column: 2/3;
     grid-row: 4/7;
   }
 
-  img{
+  img {
     width: 100%;
+  }
+}
+
+@media (max-width: 1199.98px) {
+  .info-gallery.container {
+    width: 95%;
+  }
+
+  .info-pictures.container {
+    width: 95%; 
+  }
+}
+
+@media (max-width: 991.98px) {
+}
+
+@media (max-width: 767.98px) {
+  .info-gallery {
+    grid-template-columns: 1fr;
+
+    &__title {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      font-size: 20px;
+
+      li {
+        margin-bottom: 10px;
+      }
+    }
+
+    p {
+      font-size: 20px;
+    }
+
+    &__img,
+    &__text {
+      grid-column: 1/2;
+      width: 100%;
+    }
+    &__pic {
+      height: 320px;
+    }
+    &__text2 {
+      margin-top: 20px;
+    }
+  }
+  
+  .info-pictures{
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, auto);
+
+    &__text{
+      font-size: 24px;
+    }
+
+    &__img1 {
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+  
+    &__img2 {
+      grid-column: 1/2;
+      grid-row: 3/4;
+    }
+  
+    &__img3 {
+      grid-column: 1/2;
+      grid-row: 4/5;
+    }
+  }
+}
+
+@media (max-width: 575.98px) {
+  .info-gallery {
+    &__pic {
+      height: 280px;
+    }
   }
 }
