--- a/style/style.css
+++ b/style/style.css
@@ -1108,6 +1108,44 @@ input[type=button]:focus {
   width: 100%;
 }
 
+.advantages {
+  margin-bottom: 70px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.advantages__title {
+  text-align: center;
+  font-size: 30px;
+  grid-column: 1/5;
+}
+.advantages__like {
+  display: grid;
+  grid-template-column: repeat(4, 1fr);
+  gap: 20px;
+}
+.advantages__like-text {
+  grid-column: 1/3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+.advantages__like-text p {
+  padding: 20px;
+  background: #EFEFEF;
+  border-radius: 20px;
+  font-size: 20px;
+}
+.advantages__like-pic1 {
+  grid-column: 3/4;
+}
+.advantages__like-pic2 {
+  grid-column: 4/5;
+}
+
 @media (max-width: 1199.98px) {
   .info-gallery.container {
     width: 95%;
