--- a/style/style.scss
+++ b/style/style.scss
@@ -1342,6 +1342,58 @@ input[type="button"]:focus {
   }
 }
 
+.advantages{
+  margin-bottom: 70px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+
+  &__title{
+    text-align: center;
+    font-size: 30px;
+    grid-column: 1/5;
+  }
+
+  &__like{
+    display: grid;
+    grid-template-column: repeat(4, 1fr);
+    gap: 20px;
+  }
+
+  &__like-text{
+    grid-column: 1/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+
+    p{
+      padding: 20px;
+      background: #EFEFEF;
+      border-radius: 20px;
+      font-size: 20px;
+    }
+  }
+
+  &__like-pic1{
+    grid-column: 3/4;
+  }
+  &__like-pic2{
+    grid-column: 4/5;
+  }
+
+  &__cards{
+    display: flex;
+    gap: 20px;
+  }
+}
+
+
+
+
 @media (max-width: 1199.98px) {
   .info-gallery.container {
     width: 95%;
