--- a/style/style.scss
+++ b/style/style.scss
@@ -1342,7 +1342,7 @@ input[type="button"]:focus {
   }
 }
 
-.advantages{
+.advantages {
   margin-bottom: 70px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -1351,48 +1351,141 @@ input[type="button"]:focus {
   flex-direction: column;
   gap: 50px;
 
-  &__title{
+  &__title {
     text-align: center;
     font-size: 30px;
     grid-column: 1/5;
   }
 
-  &__like{
+  &__like {
     display: grid;
-    grid-template-column: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
   }
 
-  &__like-text{
+  &__description {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-between;
+    height: 100%;
+
+    p {
+      padding: 20px;
+      background: #efefef;
+      border-radius: 20px;
+      font-size: 20px;
+    }
+  }
+
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &__like-text {
     grid-column: 1/3;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
 
-    p{
+    p {
       padding: 20px;
-      background: #EFEFEF;
+      background: #efefef;
       border-radius: 20px;
       font-size: 20px;
     }
   }
 
-  &__like-pic1{
+  &__like-pic1 {
     grid-column: 3/4;
   }
-  &__like-pic2{
+  &__like-pic2 {
     grid-column: 4/5;
   }
 
-  &__cards{
+  &__title2 {
+    margin-top: 50px;
+  }
+
+  &__cards {
     display: flex;
     gap: 20px;
   }
 }
 
+.compare {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 
+  &__block {
+    position: relative;
+  }
 
+  &__img {
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  &__first,
+  &__second {
+    font-size: 20px;
+    padding: 20px;
+    width: auto;
+    position: absolute;
+    border-radius: 20px;
+  }
+
+  &__first {
+    background-color: #f8f8f8;
+    left: 100px;
+    top: 20px;
+  }
+
+  &__second {
+    background-color: #733e1e;
+    color: #fff;
+    bottom: 120px;
+    right: 40px;
+  }
+
+  // .compare__block2
+
+  &__block2 {
+    display: flex;
+    gap: 20px;    
+    margin-bottom: 50px;
+  }
+
+  // .compare__img2
+
+  &__img2 {
+  }
+
+  // .compare__text
+
+  &__text {
+    margin-top: 50px;
+
+  }
+
+  &__text p{
+    padding: 10px;
+    font-size: 16px;
+    background-color: #EFEFEF;
+    margin-top: 10px;
+    border-radius: 20px;
+    line-height: 1.5;
+
+  }
+}
 
 @media (max-width: 1199.98px) {
   .info-gallery.container {
@@ -1400,11 +1493,110 @@ input[type="button"]:focus {
   }
 
   .info-pictures.container {
-    width: 95%; 
+    width: 95%;
   }
 }
 
 @media (max-width: 991.98px) {
+  .advantages {
+    gap: 20px;
+    &__title {
+      grid-column: 1/2;
+    }
+    &__like {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(3, 1fr);
+    }
+    &__like-text {
+      grid-column: 1/2;
+      grid-row: 3/4;
+      height: max-content;
+      p {
+        font-size: 18px;
+      }
+    }
+    &__like-pic {
+      height: 400px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 20px;
+    }
+    &__like-pic img {
+      width: 100%;
+      height: auto;
+    }
+    &__like-pic1 {
+      grid-column: 1/2;
+      grid-row: 1/2;
+    }
+    &__like-pic2 {
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+
+    &__cards {
+      display: flex;
+      flex-direction: column;
+    }
+    &__card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__description {
+      width: 100%;
+
+      p {
+        font-size: 18px;
+      }
+    }
+    &__img {
+      width: 100%;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .compare {
+    .compare__block {
+      background-color: white;
+      padding-top: 20px;
+      padding-bottom: 80px;
+    }
+    &__first,
+    &__second {
+      font-size: 18px;
+      width: auto;
+    }
+
+    &__first {
+      left: 15px;
+    }
+
+    &__second {
+      right: 15px;
+      bottom: 20px;
+    }
+
+    &__block2{
+      flex-direction: column;
+    }
+
+    &__img2{
+      background-color: #fff;
+      overflow: hidden;
+
+      img{
+         width: 100%;
+      }
+    }
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -1440,12 +1632,12 @@ input[type="button"]:focus {
       margin-top: 20px;
     }
   }
-  
-  .info-pictures{
+
+  .info-pictures {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, auto);
 
-    &__text{
+    &__text {
       font-size: 24px;
     }
 
@@ -1453,15 +1645,43 @@ input[type="button"]:focus {
       grid-column: 1/2;
       grid-row: 2/3;
     }
-  
+
     &__img2 {
       grid-column: 1/2;
       grid-row: 3/4;
     }
-  
+
     &__img3 {
       grid-column: 1/2;
       grid-row: 4/5;
+    }
+  }
+
+  .advantages {
+    &__title {
+      font-size: 24px;
+      font-weight: 600;
+    }
+  }
+
+  .compare {
+    .compare__block {
+      padding-top: 80px;
+      padding-bottom: 130px;
+    }
+    &__first,
+    &__second {
+      font-size: 18px;
+      width: 80%;
+    }
+
+    &__first {
+      left: 15px;
+    }
+
+    &__second {
+      right: 15px;
+      bottom: 40px;
     }
   }
 }
@@ -1470,6 +1690,43 @@ input[type="button"]:focus {
   .info-gallery {
     &__pic {
       height: 280px;
+    }
+  }
+
+  .advantages {
+    &__like {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+    &__like-pic {
+      height: 250px;
+    }
+  }
+
+  .compare {
+    .compare__block {
+      padding-top: 80px;
+      padding-bottom: 120px;
+    }
+    &__first,
+    &__second {
+      font-size: 18px;
+      width: 80%;
+    }
+
+    &__first {
+      left: 15px;
+    }
+
+    &__second {
+      right: 15px;
+      bottom: 20px;
+    }
+
+    &__img2{
+      img{
+        margin-left: -20px;
+      }
     }
   }
 }
