--- a/style/style.scss
+++ b/style/style.scss
@@ -1355,12 +1355,18 @@ input[type="button"]:focus {
     text-align: center;
     font-size: 30px;
     grid-column: 1/5;
+
+    margin: 30px 0;
   }
 
   &__like {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
+  }
+
+  &__like-pic{
+    width: 100%;
   }
 
   &__description {
@@ -1382,6 +1388,12 @@ input[type="button"]:focus {
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
   }
 
   &__like-text {
@@ -1421,9 +1433,11 @@ input[type="button"]:focus {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin: 50px 0;
 
   &__block {
     position: relative;
+    margin: 30px 0;
   }
 
   &__img {
@@ -1462,6 +1476,7 @@ input[type="button"]:focus {
     display: flex;
     gap: 20px;    
     margin-bottom: 50px;
+    margin-top: 50px;
   }
 
   // .compare__img2
@@ -1567,7 +1582,6 @@ input[type="button"]:focus {
     .compare__block {
       background-color: white;
       padding-top: 20px;
-      padding-bottom: 80px;
     }
     &__first,
     &__second {
@@ -1667,7 +1681,7 @@ input[type="button"]:focus {
   .compare {
     .compare__block {
       padding-top: 80px;
-      padding-bottom: 130px;
+      // padding-bottom: 130px;
     }
     &__first,
     &__second {
@@ -1706,7 +1720,7 @@ input[type="button"]:focus {
   .compare {
     .compare__block {
       padding-top: 80px;
-      padding-bottom: 120px;
+      // padding-bottom: 120px;
     }
     &__first,
     &__second {
@@ -1729,4 +1743,11 @@ input[type="button"]:focus {
       }
     }
   }
+}
+
+
+.advantages2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
